2016-01-20 Yu-Jie Lin <livibetter@gmail.com>
	* autogen.sh: added.

	* configure: removed.

	* configure.ac: renamed from configure.in.

	* view.c (graphicEngineInit): hid cursor.


****** Release 0.1.2 ******

2016-01-19  Yu-Jie Lin <livibetter@gmail.com>
	* nInvaders.c: fixed different lives, weite, level, and skill_level
	  variables in objects.

	* aliens.c: fixed warning: iteration 10u invokes undefined behavior on
	  lowest_ship.

2003-10-14  Alexander Hollinger <alexander.hollinger@gmx.net>
	* LICENSE: renamed gpl.txt to LICENSE
	* added configure-script: Makefile.in, config.h.in, configure
	  configure.in


2003-09-21  Alexander Hollinger <alexander.hollinger@gmx.net>

	* view.c (titleScreenDisplay): changed MAX_NUMBER_HIGHSCORE_ENTRIES
          to MAX_HIGHSCORE_ENTRIES.

	* highscore.c: changed writing / reading highscore from binary 
	  mode to ascii mode for compatibility issues when porting 
	  highscore from litte-endian to big-endian machines.

	* highscore.h: adjusted declarations

	* file.c: removed from cvs-repository

	* file.h: removed from cvs-repository


2003-09-18  Sebastian Gutsfeld  <segoh@gmx.net>

	* nInvaders.c: included highscore.h

	* nInvaders.c (readInput): added addEntry test in case
	GAME_HIGHSCORE

	* nInvaders.c (main): added reading of highscore file as startup
	and saving of highscore at programm end

	* view.c: included highscore.h

	* view.c (titleScreenDisplay): added WINDOW wHighscore for
	highscore display and changed whole function to display highscore
	between alien frames

	* highscore.c: renamed from score.c to highscore.c; added a few
	functions (don't ask me which)

	* highscore.h: headerfile for highscore.c
	

2003-05-26  Alexander Hollinger <alexander.hollinger@gmx.net>

	* file.c (writeHighScore): writes highscore in binary mode
	  hacking highscore file is more difficult now - and writing
	  and reading much easier ;o)
	  
	* file.c (readHighScore): reads highscore from file.